Adjustment Table Endereco&Pessoa

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,19 +22,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-primary" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-primary" asp-area="" asp-controller="Home" asp-action="Privacy">Sobre nós</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Sobre nós</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-primary" asp-area="" asp-controller="Pessoas" asp-action="Index">Pessoas</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Pessoas" asp-action="Index">Pessoas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-primary" asp-area="" asp-controller="Vacinas" asp-action="Index">Vacinas</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Vacinas" asp-action="Index">Vacinas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-primary" asp-area="" asp-controller="Enderecoes" asp-action="Index">Endereços</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Enderecoes" asp-action="Index">Endereços</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
