--- a/Views/Enderecoes/Create.cshtml
+++ b/Views/Enderecoes/Create.cshtml
@@ -8,10 +8,9 @@
         background: #dcdcdc;
     }
 </style>
-
 <h1>Criar</h1>
 
-<h4>Endereco</h4>
+<h4>Endereço</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -44,8 +43,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="PessoaId" class="control-label"></label>
-                <input asp-for="PessoaId" class="form-control" />
-                <span asp-validation-for="PessoaId" class="text-danger"></span>
+                <select asp-for="PessoaId" class ="form-control" asp-items="ViewBag.PessoaId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
