--- a/Views/Enderecoes/Delete.cshtml
+++ b/Views/Enderecoes/Delete.cshtml
@@ -16,44 +16,44 @@
     <h4>Endereco</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rua)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Rua)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Numero)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Numero)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Complemento)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Complemento)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Bairro)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Bairro)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UF)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UF)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PessoaId)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Pessoa)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PessoaId)
-        </dd>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Pessoa.NomeCompleto)
+        </dd class>
     </dl>
-
+    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
