--- a/Views/Enderecoes/Details.cshtml
+++ b/Views/Enderecoes/Details.cshtml
@@ -12,44 +12,44 @@
 <h1>Detalhes</h1>
 
 <div>
-    <h4>Endereco</h4>
+    <h4>Endereço</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rua)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Rua)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Numero)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Numero)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Complemento)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Complemento)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Bairro)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Bairro)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UF)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UF)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PessoaId)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Pessoa)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PessoaId)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Pessoa.NomeCompleto)
         </dd>
     </dl>
 </div>
