--- a/Views/Enderecoes/Edit.cshtml
+++ b/Views/Enderecoes/Edit.cshtml
@@ -8,10 +8,9 @@
         background: #dcdcdc;
     }
 </style>
-
 <h1>Editar</h1>
 
-<h4>Endereco</h4>
+<h4>Endereço</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="PessoaId" class="control-label"></label>
-                <input asp-for="PessoaId" class="form-control" />
+                <select asp-for="PessoaId" class="form-control" asp-items="ViewBag.PessoaId"></select>
                 <span asp-validation-for="PessoaId" class="text-danger"></span>
             </div>
             <div class="form-group">
