--- a/Views/Enderecoes/Index.cshtml
+++ b/Views/Enderecoes/Index.cshtml
@@ -7,6 +7,12 @@
     body {
         background: #dcdcdc;
     }
+    a {
+        color: deepskyblue
+    }
+    p a{
+        color: blue;
+    }
 </style>
 <h1>Endereços</h1>
 
