--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -5,17 +5,20 @@
     body {
         background: #dcdcdc;
     }
+    span{
+        color: red;
+    }
 </style>
 
 <h3>Laboratótios Sodré</h3>
 
 <p>
     Com 38 anos de tradição, a marca Laboratório Sodré tem o compromisso de oferecer suporte para diagnóstico complementar, 
-    realizando exames de análises clínicas com qualidade e segurança para todos os seus clientes: médicos, pacientes e organizações empresariais.
+    realizando exames de análises clínicas com qualidade e <span>segurança</span> para todos os seus clientes: médicos, pacientes e organizações empresariais.
 </p>
 <p>
-    As empresas da marca Laboratório Sodré contam com equipes de profissionais especializados, equipamentos de última 
-    geração e tecnologia da informação, onde é possível fornecer altos níveis de serviço técnico, ético e moral aos seus clientes, de acordo com os padrões estabelecidos pela Sociedade Brasileira de Análises Clínicas.
+    As empresas da marca Laboratório Sodré contam com equipes de profissionais <span>especializados</span>, equipamentos de última 
+    geração e tecnologia da informação, onde é possível fornecer <span>altos níveis de serviço técnico</span>, ético e moral aos seus clientes, de acordo com os padrões estabelecidos pela Sociedade Brasileira de Análises Clínicas.
 </p>
 <p>
     Atendendo hospitais particulares, Santas Casas, empresas de RH, empresas privadas do setor alimentício e sucroalcooleiro, além de convênios e médicos, 
@@ -23,7 +26,7 @@
     equipamentos de ponta e consulta de exames por e-mail ou por acesso individualizado pela internet, disponíveis para clientes e médicos.
 </p>
 <p>
-    Visando manter o excelente padrão de atendimento, alguns dos laboratórios Sodré possuem plantão de coleta 24h para hospitais, o que possibilita atender a demanda de exames de emergências a qualquer hora do dia.
+    Visando manter o excelente padrão de atendimento, alguns dos laboratórios Sodré <span>possuem plantão de coleta 24h</span> para hospitais, o que possibilita atender a demanda de exames de emergências a qualquer hora do dia.
 </p>
 <p>
     Para viabilizar o atendimento aos seus pacientes, o grupo mantém além de suas unidades próprias: postos de coletas em clínicas, centro de atendimentos médicos, hospitais, postos de saúde, empresas particulares e atendimento domiciliar.
@@ -32,10 +35,10 @@
     Os laboratórios que carregam a marca Laboratório Sodré disponibilizam uma vasta gama de exames na área de análises clínicas, bem como outras divisões que atuam nos campos de exames toxicológicos, medicina ocupacional, testes de paternidade e sexagem fetal.
 </p>
 <p>
-    Em 2011, a marca Laboratório Sodré recebeu um novo formato se posicionando como uma marca moderna e tecnológica, que prioriza a inovação contínua para melhor 
-    atender seus clientes e proporcionar o crescimento de seu capital humano. Esse conceito está enraizado na cultura organizacional da empresa e por isso, a marca Laboratório Sodré tem se 
+    Em 2011, a marca Laboratório Sodré recebeu um novo formato se posicionando como uma <span>marca moderna e tecnológica</span>, que prioriza a <span>inovação</span> contínua para melhor 
+    atender seus clientes e proporcionar o crescimento de seu capital humano. Esse conceito está enraizado na <span>cultura organizacional da empresa</span> e por isso, a marca Laboratório Sodré tem se 
     consolidado no mercado que atua como uma empresa de excelência, sempre priorizando sua qualidade técnica e os princípios éticos.
 </p>
 <p>
-    Assim, seu maior objetivo é levar resultados fiéis aos seus clientes e médicos, com agilidade, segurança e bom atendimento, transformando-se em uma referência de qualidade no meio laboratorial.
+    Assim, seu maior objetivo é levar <span>resultados fiéis</span> aos seus clientes e médicos, com agilidade, segurança e bom atendimento, transformando-se em uma <span>referência de qualidade</span> no meio laboratorial.
 </p>
