--- a/Views/Enderecoes/Delete.cshtml
+++ b/Views/Enderecoes/Delete.cshtml
@@ -7,11 +7,18 @@
     body {
         background: #dcdcdc;
     }
+    a {
+        color: blue;
+    }
+
+    h3 {
+        color: red;
+    }
 </style>
 
 <h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja excluir?</h3>
 <div>
     <h4>Endereco</h4>
     <hr />
