--- a/Views/Enderecoes/Index.cshtml
+++ b/Views/Enderecoes/Index.cshtml
@@ -17,7 +17,7 @@
 <h1>Endereços</h1>
 
 <p>
-    <a asp-action="Create">Novo Endereço</a>
+    <a asp-action="Create" class="btn btn-primary">Novo Endereço</a>
 </p>
 <table class="table table-hover table-dark">
     <thead>
@@ -65,9 +65,9 @@
                 @Html.DisplayFor(modelItem => item.Pessoa.NomeCompleto)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
