--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,6 +34,7 @@
     p {
         font-weight: 400;
         font-size: 1.2rem;
+        color: #e1c6c6;
     }
     a span:hover {
         color: #8c0707;
@@ -42,18 +43,35 @@
     h1, h2, p {
         font-family: 'Poppins', sans-serif;
     }
-
-    
+    h1 {
+        font-weight: 700;
+        font-size: 4.5rem;
+        color: #ffffff;
+    }
+    h2 {
+        color: #ffffff;
+        line-height: 1em;
+        text-transform: uppercase;
+        font-size: 5rem;
+        font-weight: 400;
+    }
+    #porpuse {
+        color: #ffffff;
+        line-height: 1em;
+        text-transform: uppercase;
+        font-size: 4rem;
+        font-weight: 400;
+    }    
  </style>
 
 <div class="text-left">
     <br />
     <br />
-    <h1 class="display-4" style="font-weight: 700; font-size: 4.5rem; color: #ffffff">BEM VINDO!</h1>
+    <h1 class="display-4">BEM VINDO!</h1>
     <br />
-    <h2 class="display-4" style="color: #ffffff; line-height: 1em; text-transform: uppercase; font-size: 5rem; font-weight: 400; ">Nunca pare</h2>
-    <h2 class="display-4" style="color: #ffffff; line-height: 1em; text-transform: uppercase; font-size: 4rem; font-weight: 400; ">de fazer a diferença</h2>
+    <h2 class="display-4">Nunca pare</h2>
+    <h2 class="display-4" id="porpuse">de fazer a diferença</h2>
     <br />
-    <p style="color: #e1c6c6;">Laboratórios Sodré, buscando sempre inovação e qualidade a <a href="https://laboratoriosodre.com.br/" target="_blank"><span>mais de 38 anos de Tradição.</span></a></p>
-
+    <p>Laboratórios Sodré, buscando sempre inovação e qualidade a <a href="https://laboratoriosodre.com.br/" target="_blank"><span>mais de 38 anos de Tradição.</span></a></p>
+    <p style="font-weight: 700;">Faça <a asp-area="Identity" asp-page="/Account/Login"><span>Login</span></a> para ter acesso aos nosso serviços.</p>
 </div>
