--- a/Views/Pessoas/Delete.cshtml
+++ b/Views/Pessoas/Delete.cshtml
@@ -7,10 +7,12 @@
     body {
         background: #dcdcdc;
     }
+
     a {
         color: blue;
     }
-    h3{
+
+    h3 {
         color: red;
     }
 </style>
@@ -44,7 +46,31 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" onclick="archiveFunction()" id="submitForm" /> |
         <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </form>
 </div>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
+<script>
+    $('#submitForm').on('click', function (e) {
+        e.preventDefault();
+        var form = $(this).parents('form');
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            type: 'warning',
+            icon: 'warning',
+
+            showCancelButton: true,
+            confirmButtonColor: 'red',
+            cancelButtonColor: '#392BF2',
+            confirmButtonText: 'Yes, delete it!'
+        }).then((result) => {
+            if (result.value) {
+
+                form.submit();
+            }
+        });
+    });
+</script>
