Scrollbar final adjustment

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,12 +17,12 @@
         }
 
         ::-webkit-scrollbar-track {
-            background: #98BAE7;
+            background: #CCCCCC;
             border-radius: 0;
         }
 
         ::-webkit-scrollbar-thumb {
-            background: #0F52BA;
+            background: #98BAE7;
             border-radius: 15px;
         }
     </style>
